--- a/5. Sticky Navigation/index.html
+++ b/5. Sticky Navigation/index.html
@@ -4,9 +4,40 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Sticky Navigation</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+
+    <!-- <header>
+        <div class="container">
+            <h1 class="logo"><a href="#">Logo</a></h1>
+            <ul>
+                <li><a href="#" class="active">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Services</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </div>
+    </header> -->
+
+    <main>
+        <div class="container">
+            <h1>Welcome</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores, numquam.</p>
+        </div>
+    </main>
+
+    <section>
+        <div class="container">
+            <h1>Lorem ipsum dolor sit amet.</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem, reprehenderit assumenda! Commodi iste incidunt eligendi, ut quae in esse quaerat!</p>
+
+            <h1>Lorem ipsum dolor sit amet.</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium a neque molestias cupiditate suscipit iusto minima doloremque, earum consequuntur recusandae?</p>
+        </div>
+    </section>
+
+
 </body>
 </html>
