--- a/5. Sticky Navigation/index.html
+++ b/5. Sticky Navigation/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-    <!-- <header>
+    <header>
         <div class="container">
             <h1 class="logo"><a href="#">Logo</a></h1>
             <ul>
@@ -19,7 +19,7 @@
                 <li><a href="#">Contact</a></li>
             </ul>
         </div>
-    </header> -->
+    </header>
 
     <main>
         <div class="container">
