--- a/5. Sticky Navigation/index.html
+++ b/5. Sticky Navigation/index.html
@@ -13,7 +13,7 @@
         <div class="container">
             <h1 class="logo"><a href="#">Logo</a></h1>
             <ul>
-                <li><a href="#" class="active">Home</a></li>
+                <li><a href="#" class="current">Home</a></li>
                 <li><a href="#">About</a></li>
                 <li><a href="#">Services</a></li>
                 <li><a href="#">Contact</a></li>
@@ -38,6 +38,6 @@
         </div>
     </section>
 
-
+    <script src="script.js"></script>
 </body>
 </html>
