--- a/6. Responsive-Navbar/index.html
+++ b/6. Responsive-Navbar/index.html
@@ -23,6 +23,14 @@
             <i class="fa-solid fa-bars"></i>
         </div>
     </div>
+
+    <div class="dropdown_menu">
+        <li><a href="hero">Home</a></li>
+        <li><a href="about">About</a></li>
+        <li><a href="services">Services</a></li>
+        <li><a href="contact">Contact</a></li>
+        <li><a href="#" class="action_btn">Get Started</a></li>
+    </div>
     </header>
 </body>
 </html>
