--- a/6. Responsive-Navbar/index.html
+++ b/6. Responsive-Navbar/index.html
@@ -31,6 +31,17 @@
         <li><a href="contact">Contact</a></li>
         <li><a href="#" class="action_btn">Get Started</a></li>
     </div>
+
     </header>
+
+    <main>
+        <section id="hero">
+            <h1>Welcome</h1>
+            <p>Lorem ipsum dolor sit amet consectetur<br />
+               adipisicing elit. Velit, et?</p>
+        </section>
+    </main>
+
+    <script src="script.js"></script>
 </body>
 </html>
