--- a/6. Responsive-Navbar/index.html
+++ b/6. Responsive-Navbar/index.html
@@ -13,10 +13,10 @@
         <div class="navbar">
         <div class="logo"><a href="#">Responsive</a></div>
         <ul class="links">
-            <li><a href="hero">Home</a></li>
-            <li><a href="about">About</a></li>
-            <li><a href="services">Services</a></li>
-            <li><a href="contact">Contact</a></li>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Services</a></li>
+            <li><a href="#">Contact</a></li>
         </ul>
         <a href="#" class="action_btn">Get Started</a>
         <div class="toggle_btn">
@@ -38,7 +38,7 @@
         <section id="hero">
             <h1>Welcome</h1>
             <p>Lorem ipsum dolor sit amet consectetur<br />
-               adipisicing elit. Velit, et?</p>
+              adipisicing elit. Velit, et?</p>
         </section>
     </main>
 
