--- a/7. Delete-Button-Animation/index.html
+++ b/7. Delete-Button-Animation/index.html
@@ -5,10 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Delete Button Animation</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
-    
+
+    <div class="btn open">
+        <div class="front">Delete</div>
+        <div class="back">
+            <p>Are you sure you want to delete?</p>
+            <button class="btn_yes">Yes</button>
+            <button class="btn_no">No</button>
+        </div>
+    </div>
+
     <script src="script.js"></script>
 </body>
 </html>
