--- a/7. Delete-Button-Animation/index.html
+++ b/7. Delete-Button-Animation/index.html
@@ -9,13 +9,13 @@
 </head>
 <body>
 
-    <div class="btn open">
-        <div class="front">Delete</div>
+    <div class="btn">
         <div class="back">
             <p>Are you sure you want to delete?</p>
             <button class="btn_yes">Yes</button>
             <button class="btn_no">No</button>
         </div>
+        <div class="front">Delete</div>
     </div>
 
     <script src="script.js"></script>
