--- a/8. Toggle-Switch/index.html
+++ b/8. Toggle-Switch/index.html
@@ -8,6 +8,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="switch_btn">
+        <img src="images/sun.png" alt="">
+        <img src="images/moon.png" alt="">
+        <span class="circle"></span>
+    </div>
 
     <script src="script.js"></script>
 </body>
