--- a/8. Toggle-Switch-no-js/index.html
+++ b/8. Toggle-Switch-no-js/index.html
@@ -8,12 +8,18 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <!-- Dark / Light -->
     <div class="switch_btn">
         <img src="images/sun.png" alt="">
         <img src="images/moon.png" alt="">
+        <input type="checkbox" class="virtual_btn" id="theme_switch">
         <span class="circle"></span>
     </div>
-    <script src="script.js"></script>
+    <!-- On / Off -->
+    <div class="switch_btn on_off_switch">
+        <input type="checkbox" class="virtual_btn">
+        <span class="circle"></span>
+    </div>
 </body>
 
 </html>
