--- a/11. Drum-Kit/index.html
+++ b/11. Drum-Kit/index.html
@@ -7,7 +7,8 @@
   <link rel="icon" href="https://fav.farm/🔥" />
 </head>
 <body>
-
+  <div class="container">
+  <h1>Click or Press a key</h1>
   <div class="keys">
     <div data-key="65" class="key">
       <kbd>A</kbd>
@@ -46,7 +47,7 @@
       <span class="sound">tink</span>
     </div>
   </div>
-
+</div>
   <audio data-key="65" src="sounds/clap.wav"></audio>
   <audio data-key="83" src="sounds/hihat.wav"></audio>
   <audio data-key="68" src="sounds/kick.wav"></audio>
