--- a/13. Score-Keeper/index.html
+++ b/13. Score-Keeper/index.html
@@ -4,10 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Score Keeper</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <h1><span id="p1Score">0</span> to <span id="p2Score">0</span></h1>
+    <button id="p1Button">+1 Player One</button>
+    <button id="p2Button">+1 Player Two</button>
+    <button id="reset">Reset</button>
     
     <script src="script.js"></script>
 </body>
