--- a/16. Calculator/index.html
+++ b/16. Calculator/index.html
@@ -2,13 +2,37 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Calculator</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
+    <div class="container">
+        <div class="display">
+            <span class="number-display">0</span>
+        </div>
+        <div class="calculator-buttons">
+        <button class="btn" id="btn-clear">C</button>
+        <button class="btn" id="btn-delete">←</button>
+        <button class="btn" id="btn-division">÷</button>
+        <button class="btn" id="btn-7">7</button>
+        <button class="btn" id="btn-8">8</button>
+        <button class="btn" id="btn-9">9</button>
+        <button class="btn" id="btn-multiplication">×</button>
+        <button class="btn" id="btn-4">4</button>
+        <button class="btn" id="btn-5">5</button>
+        <button class="btn" id="btn-6">6</button>
+        <button class="btn" id="btn-subtracting">-</button>
+        <button class="btn" id="btn-1">1</button>
+        <button class="btn" id="btn-2">2</button>
+        <button class="btn" id="btn-3">3</button>
+        <button class="btn" id="btn-addition">+</button>
+        <button class="btn" id="btn-0">0</button>
+        <button class="btn" id="btn-equal">=</button>
+        </div>
+    </div>
     
-    <script src="script.js"></script>
+    <script src="app.js"></script>
 </body>
 </html>
