--- a/17. Temperature-Converter/index.html
+++ b/17. Temperature-Converter/index.html
@@ -2,13 +2,22 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Temperature Converter</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
-    <script src="script.js"></script>
+    <div id="celcius">
+        <input type="number" placeholder="celcius...">
+    </div>
+
+    <div id="fahrenheit">
+        <input type="number" placeholder="fahrenheit...">
+    </div>
+
+    <div id="kelvin">
+        <input type="number" placeholder="kelvin...">
+    </div>
+    <script src="app.js"></script>
 </body>
 </html>
